<resources>
    <string name="app_name">My First App</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered Mobile Number and Email below</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="no_have_an_account_sign_up">No have an account? Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
</resources>